# geovaluation

./: # main.tf  .dockerignore  .env.example  .gitignore  CLAUDE.md  DEMO_load-and-compress-data.ipynb  DEMO_notes.md  Dockerfile  README.md  app.py  deploy.sh  knowledge-core.md  ml_architecture_directions.md  plan.md  requirements.txt  ruff.toml  sites_unknown_nfc_enablement_status.csv  startup.sh
.azure/: config
.claude/: plan.md  settings.json
docs/: ARCHITECTURE.md  DATA_SOURCES.md  MODEL_ARTIFACT_CHECKLIST.md  MODEL_TRAINING_STEPS_DETAIL.md  MODEL_TRAINING_SUMMARY.md  README.md  add_catboost_and_xgboost_to_model_selection_options.md  api.md  app-routes.txt  config_site_scoring_module.md  conformal_causality_implementation_strategy.md  data-pipeline-glossary.html  data_loading_and_processing.md  data_ontology.yaml  data_transformation_pipeline.md  generate_pipeline_doc.py  init_site_scoring_ml_module.md  knowledge-core.md  model_training_paths.md  parquet_to_model_pipeline.md  pipeline_glossary.html  secondary_scripts_pipeline.md  site_walkability_script.md  src_package_initialization.md  test_coverage.md  training_features.csv  training_loop.md
g_util/: pytorch_demo.ipynb
infra/: README.md  backend.tf.example  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
notebooks/: DEMO_model-feature_subset_comparison.ipynb  DEMO_platinum_EDA.ipynb  data_pipeline_walkthrough.ipynb  load-and-compress-data.ipynb  tech-talk-demo.ipynb  (+1 more)
src/dooh_ml/: __init__.py  config.py  pyproject.toml  requirements.txt
src/dooh_ml/data/: __init__.py  loader.py  preprocessing.py
src/dooh_ml/inference/: __init__.py  prioritizer.py
src/dooh_ml/models/: __init__.py  causal.py  classifier.py  similarity.py
src/dooh_ml/training/: __init__.py  pipeline.py
src/dooh_ml/utils/: __init__.py  mlflow_utils.py
(+209 files in other folders)
