[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dooh-ml"
version = "0.1.0"
description = "DOOH Site Optimization ML Platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DOOH ML Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "catboost>=1.2.0",
    "econml>=0.14.0",
    "gower>=0.1.2",
    "shap>=0.43.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "geopandas>=0.14.0",
    "mlflow>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
full = [
    "causalml>=0.14.0",
    "dowhy>=0.10.0",
    "dice-ml>=0.10",
    "lifelines>=0.27.0",
    "scikit-survival>=0.21.0",
    "imbalanced-learn>=0.11.0",
    "azureml-mlflow>=1.50.0",
]

[project.scripts]
dooh-train = "scripts.train:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dooh_ml*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=dooh_ml --cov-report=term-missing"
